@@ -55,7 +55,7 @@ a80a54cfe4673d90783a3ba49f9b4535 *man/summary.pairwise.Rd
 f22bbf5e151d912a8efcb00990a588fa *man/trajectory.analysis.Rd
 600001722c89e75928dbe4984812fdc5 *man/vec.cor.matrix.Rd
 8dd28dfe65e0542561bc6096514f7d94 *NAMESPACE
-dd4808778ecf03d35c8dc5ce255e7846 *NEWS
+77478202d59ecabcc5cf6ed570040015 *NEWS
 262059f161b3a6bef292cdd97fc9c414 *R/anova.lm.rrpp.r
 c2cda15833b34d15cbc97c9cd4530666 *R/classify.r
 52536f21f7ea4cdcfa3ebfe15b4ffbac *R/coef.lm.rrpp.r
@@ -68,7 +68,7 @@ be65a023ec04fe716867de7a1907b645 *R/reveal.model.designs.r
 ba8016d8b7fb86eb9064577738d2d28d *R/RRPP.support.code.r
 b89fcf6916542d1b9659736f4699c83c *R/RRPP.utils.r
 89843e939b7cd289a5b651730bae8b8f *R/shared.support.code.r
-fc1041b73d8b10c678b62ce91dfa70d3 *R/trajectory.analysis.r
+2eb261fdbc91de0a245ef56189dbd681 *R/trajectory.analysis.r
 987d403df491c09b6db91776c4443a53 *README.md
 7db72b7e01004751c5cf9d9eb2c9122c *RRPP.Rproj
 070e9a22fe4f8a290a46ac3598513879 *vignettes/ANOVA.vs.MANOVA.Rmd
