@@ -1,6 +1,7 @@
 RRPP VERSION 0.4.1.9000 (Development)
 
 BUG FIXES 
+    o Fixed trajectory.analysis traj.list issue, to not use grep for sorting trajectories.  (Now lexical ordering of interactions is used.)
     o Changed det to determinant in all needing functions, to use modulus for 
     near-singular matrices
     o Fixed bug in plot.lm.rrpp (code lines out of order)
